--- a/arcovid19/web/templates/base.html
+++ b/arcovid19/web/templates/base.html
@@ -82,7 +82,7 @@ License: BSD-3-Clause
         <div class="navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#}">
+                    <a class="nav-link active" href="{{ url_for('arcovid19.icurve') }}">
                         <i class="fa fa-chart-line"></i>
                         IC Models
                     </a>
