web done.... need test

--- a/arcovid19/web/templates/InfectionCurve.html
+++ b/arcovid19/web/templates/InfectionCurve.html
@@ -16,9 +16,9 @@
     table.table td, table.table th,
     table.table label,
     table.table .form-control {
-
+        font-size: 0.7rem;
         padding-bottom: 0px !important;
-        padding-top: 8px !important;
+        padding-top: 5px !important;
     }
 
     table.table td input {
