--- a/arcovid19/web/templates/InfectionCurve.html
+++ b/arcovid19/web/templates/InfectionCurve.html
@@ -67,7 +67,7 @@
                             </a>
                     </tr>
                     {% for error in field.errors %}
-                    <tr class="text-danger">
+                    <tr class="field-error text-danger">
                         <td></td>
                         <td>{{error}}</td>
                     </tr>
