--- a/arcovid19/web/templates/base.html
+++ b/arcovid19/web/templates/base.html
@@ -90,6 +90,12 @@ License: BSD-3-Clause
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link active" href="{{ url_for('arcovid19.cases') }}">
+                        <i class="fa fa-users"></i>
+                        {% trans %}Cases{% endtrans %}
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link active" target="_new" href="https://arcovid19.readthedocs.io/">
                         <i class="fa fa-life-ring"></i>
                         {% trans %}Help{% endtrans %}
